[package]
name = "ragnar-component-registry-builder"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pest = "2.1.3"
pest_derive = "2.1.0"
failure = {version="0.1.7", features=["default","backtrace"]}

