[package]
name = "ragnar-component-registry-builder"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.105", features = ["derive"] }
serde_json = "1.0.50"
toml = "0.5.6   "
pest = "2.1.3"
pest_derive = "2.1.0"
failure = {version="0.1.7", features=["default","backtrace"]}
semver = "1.0.16"
log = "0.4.8"