[package]
name = "ragnar-dev-server-lib"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["web"]
web = []
ios = []
android = []
linux = []
mac = []
windows = []

[dependencies]
ragnar-lib = { path = "../ragnar-lib"}
structopt = "0.3.12"
actix-web = "3.0.0-alpha.1"
actix-web-actors = "2.0.0"
snafu = "0.6.3"