[package]
name = "ragnar-dev-server-lib"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["web"]
web = []
ios = []
android = []
linux = []
mac = []
windows = []

[dependencies]
ragnar-lib = { path = "../ragnar-lib"}
structopt = "0.3.12"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix = "0.9.0"
anyhow = "1.0.28"
thiserror = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
ctrlc = { version="3.1.4", features = ["termination"]}
actors-rs = "0.1"

[dev-dependencies]
env_logger = "0.7.1"