[package]
name = "ragnar-dev-server-lib"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["web"]
web = []
ios = []
android = []
linux = []
mac = []
windows = []

[dependencies]
ragnar-lib = { path = "../ragnar-lib"}
structopt = "0.3.12"
anyhow = "1.0.28"
thiserror = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
ctrlc = { version="3.1.4", features = ["termination"]}
futures = "0.3.5"
warp = "0.2.3"
futures-util = "0.3.5"
tokio = "0.3.5"

[dev-dependencies]
env_logger = "0.7.1"