[package]
name = "ragnar-html-markup"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ragnar-lib = {path = "../ragnar-lib"}
chrono = "0.4.11"