[package]
name = "playground"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
log = "0.4.8"
threadpool = "1.7.1"
crossbeam = "0.7.2"
bumpalo = "3.2.0"
downcast-rs = "1.1.1"

[dev-dependencies]
env_logger = "0.7.0"