[package]
name = "ragnar-lib"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
downcast-rs = "1.1.1"
ragnar-derive-component-builder = { path = "../derive-component-builder" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.7.0"