[package]
name = "ragnar-rsx-macro"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
ragnar-component-registry-builder = {path = "../component-registry-builder"}
syn = "1.0.17"
quote = "1.0.3"
proc-macro2 = "1.0.10"
lazy_static = "1.4.0"
failure = "0.1.7"