[package]
name = "app"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
web = []

[dependencies]
ragnar-html-markup = {path = "../../../html-markup"}
ragnar-lib = {path= "../../../ragnar-lib"}
ragnar-rsx-macro = {path= "../../../rsx-macro"}
ragnar-derive-component-builder = {path = "../../../derive-component-builder"}
serde = { version = "1.0", features = ["derive"] }