[package]
name = "devserver"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ragnar-dev-server-lib = {path = "../../../dev-server-lib"}
ragnar-lib = {path = "../../../ragnar-lib"}
app = {path = "../app"}
actix-web = "2.0.0"
actix-rt = "1.0.0"
anyhow = "1.0.28"