[package]
name = "devserver"
version = "0.1.0"
authors = ["krampenschiesser <krampenschiesser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ragnar-dev-server-lib = {path = "../../../dev-server-lib"}
ragnar-lib = {path = "../../../ragnar-lib"}
app = {path = "../app"}
tokio = { version = "0.2", features = ["macros"] }
anyhow = "1.0.28"
ragnar-html-markup = {path = "../../../html-markup"}